--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html, body, #root {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background-color: black;
+  background-color: rgb(219, 231, 236);
 }
 
 * {
